Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32725

innodb.import_update_stats accesses uninitialized ib_table->stat_n_rows

    XMLWordPrintable

Details

    Description

      The test innodb.import_update_stats that will be added in MDEV-13626 is failing on Valgrind, and on 10.5 on MSAN. The following patch would almost fix it:

      diff --git a/storage/innobase/handler/ha_innodb.cc b/storage/innobase/handler/ha_innodb.cc
      index 086f30e119e..33ac21a4a7e 100644
      --- a/storage/innobase/handler/ha_innodb.cc
      +++ b/storage/innobase/handler/ha_innodb.cc
      @@ -14316,7 +14316,7 @@ ha_innobase::info_low(
       	DBUG_ASSERT(ib_table->get_ref_count() > 0);
       
       	if (!ib_table->is_readable()) {
      -		ib_table->stat_initialized = true;
      +		goto func_exit;
       	}
       
       	if (flag & HA_STATUS_TIME) {
      

      However, this patch would make a number of other tests fail:

      10.4 2447172afb5afed1687779e46eed217c38f89ebc with patch

      Failing test(s): encryption.innodb-bad-key-change3 innodb.innodb_bug14147491 innodb.innodb-wl5522-debug innodb_zip.wl5522_debug_zip
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 6.75h
                  1d 6.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.