MDEV-32725 innodb.import_update_stats accesses uninitialized ib_table->stat_n_rows

- InnoDB should write all zeros into a table and its indexes
statistics members when table is unreadable.